--- a/casino_testapp/Views/Shared/_Layout.cshtml
+++ b/casino_testapp/Views/Shared/_Layout.cshtml
@@ -46,7 +46,7 @@
     ======================================================== -->
 </head>
 
-<body>
+<body ng-app="MJCasinoapp" ng-controller="dashboardCtrlr">
     <!-- ======= Header ======= -->
     <header id="header" class="header fixed-top d-flex align-items-center" style="background-color: #29303A;">
 
@@ -67,9 +67,9 @@
                 <li class="nav-item dropdown pe-3">
                     <div class="nav-profile">
                         <form class="search-form d-flex align-items-center" style="justify-content: flex-end;"
-                            method="POST" action="#">
+                              method="POST" action="#">
                             <input type="text" name="query" placeholder="Php 0.00" title="Enter search keyword"
-                                style="width:fit-content; background:beige;" disabled>
+                                   style="width:fit-content; background:beige;" disabled>
                             <button type="submit" title="cash"><i class="bi bi-cash-coin"></i></button>
                         </form>
                     </div>
@@ -82,7 +82,7 @@
 
                     <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
                         <li class="dropdown-header">
-                            <h6>Kevin Anderson</h6>
+                            <h6>{{ username }}</h6>
                             <span>Web Designer</span>
                         </li>
                         <li>
@@ -178,7 +178,7 @@
 
     <main id="main" class="main layoutbg">
         @*<section class="section">*@
-        <div class="content-wrapper" ng-app="MJCasinoapp">
+        <div class="content-wrapper">
 
             @RenderBody()
         </div>
@@ -192,8 +192,27 @@
 
     </footer><!-- End Footer -->
 
-    <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
-            class="bi bi-arrow-up-short"></i></a>
+    <div class="modal fade" id="verticalycentered" tabindex="-1">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Vertically Centered</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    Non omnis incidunt qui sed occaecati magni asperiores est mollitia. Soluta at et reprehenderit. Placeat autem numquam et fuga numquam. Tempora in facere consequatur sit dolor ipsum. Consequatur nemo amet incidunt est facilis. Dolorem neque recusandae quo sit molestias sint dignissimos.
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                </div>
+            </div>
+        </div>
+    </div><!-- End Vertically centered Modal-->
+
+    <a href="#" class="back-to-top d-flex align-items-center justify-content-center">
+        <i class="bi bi-arrow-up-short"></i>
+    </a>
 
 
     <script src="~/Scripts/angular.min.js"></script>
