--- a/casino_testapp/Views/Gamelist/Sports.cshtml
+++ b/casino_testapp/Views/Gamelist/Sports.cshtml
@@ -1,5 +1,4 @@
-﻿
-@{
+﻿@{
     ViewBag.Title = "Ball";
 }
 <div class="nav iconbg">
@@ -7,51 +6,51 @@
         <ul class="nav-tabs nav-tabs-bordered d-flex navbuttons" id="borderedTabJustified" role="tablist"
             style="border-bottom:none;">
             <li class="nav-item flex-fill" role="presentation">
-                <a class="nav-link w-45" id="home-tab" role="tab" aria-controls="home"
-                   aria-selected="true" href="~/Dashboard/Index">
+                <a class="nav-link w-45" id="home-tab" role="tab" aria-controls="home" aria-selected="true"
+                    href="~/Dashboard/Index">
                     <img src="~/Content/assets/img/Dashboard/Home.png" alt="">
 
                 </a>
             </li>
             <li class="nav-item flex-fill" role="presentation">
-                <a class="nav-link w-45" id="Slot-tab" role="tab" aria-controls="home"
-                   aria-selected="true" href="~/Gamelist/Slot">
+                <a class="nav-link w-45" id="Slot-tab" role="tab" aria-controls="home" aria-selected="true"
+                    href="~/Gamelist/Slot">
                     <img src="~/Content/assets/img/Dashboard/Slotmachine.png" alt="">
                 </a>
             </li>
             <li class="nav-item flex-fill" role="presentation">
-                <a class="nav-link w-45" id="Poker-tab" role="tab" aria-controls="home"
-                   aria-selected="true" href="~/Gamelist/Poker">
+                <a class="nav-link w-45" id="Poker-tab" role="tab" aria-controls="home" aria-selected="true"
+                    href="~/Gamelist/Poker">
                     <img src="~/Content/assets/img/Dashboard/Poker.png" alt="">
                 </a>
             </li>
             <li class="nav-item flex-fill" role="presentation">
-                <a class="nav-link w-45" id="Live-tab" role="tab" aria-controls="home"
-                   aria-selected="true" href="~/Gamelist/Live">
+                <a class="nav-link w-45" id="Live-tab" role="tab" aria-controls="home" aria-selected="true"
+                    href="~/Gamelist/Live">
                     <img src="~/Content/assets/img/Dashboard/Live.png" alt="">
                 </a>
             </li>
             <li class="nav-item flex-fill" role="presentation">
-                <a class="nav-link w-45" id="Fish-tab" role="tab" aria-controls="home"
-                   aria-selected="true" href="~/Gamelist/Fish">
+                <a class="nav-link w-45" id="Fish-tab" role="tab" aria-controls="home" aria-selected="true"
+                    href="~/Gamelist/Fish">
                     <img src="~/Content/assets/img/Dashboard/Fish.png" alt="">
                 </a>
             </li>
             <li class="nav-item flex-fill" role="presentation">
-                <a class="nav-link w-45 active" id="Sports-tab" role="tab" aria-controls="home"
-                   aria-selected="true" href="~/Gamelist/Sports">
+                <a class="nav-link w-45 active" id="Sports-tab" role="tab" aria-controls="home" aria-selected="true"
+                    href="~/Gamelist/Sports">
                     <img src="~/Content/assets/img/Dashboard/Sports_name.png" alt="">
                 </a>
             </li>
             <li class="nav-item flex-fill" role="presentation">
-                <a class="nav-link w-45" id="Cock-tab" role="tab" aria-controls="home"
-                   aria-selected="true" href="~/Gamelist/Cockfight">
+                <a class="nav-link w-45" id="Cock-tab" role="tab" aria-controls="home" aria-selected="true"
+                    href="~/Gamelist/Cockfight">
                     <img src="~/Content/assets/img/Dashboard/e_sabong.png" alt="">
                 </a>
             </li>
             <li class="nav-item flex-fill" role="presentation">
-                <a class="nav-link w-45" id="MiniGames-tab" role="tab" aria-controls="home"
-                   aria-selected="true" href="~/Gamelist/MiniGames">
+                <a class="nav-link w-45" id="MiniGames-tab" role="tab" aria-controls="home" aria-selected="true"
+                    href="~/Gamelist/MiniGames">
                     <img src="~/Content/assets/img/Dashboard/MiniGames.png" alt="">
 
                 </a>
@@ -61,6 +60,58 @@
 </div>
 
 <div class="row">
-    <h2>Ball</h2>
-    </div>
+    <div class="col-sm-12">
+        <span style="display: flex;background:yellow; margin-bottom:5px;">
+            <i class="bi bi-megaphone"></i>
+            <label style="display:flex; width:100%">
+                <marquee style="text-align: center;">
+                    Thank you for playing PHLBET888. Bet more Win more! &nbsp; &nbsp; &nbsp; &nbsp; Thank you for
+                    playing PHLBET888. Bet more Win more!
+                    &nbsp; &nbsp; &nbsp; &nbsp; Thank you for
+                    playing PHLBET888. Bet more Win more!
+                    &nbsp; &nbsp; &nbsp; &nbsp; Thank you for
+                    playing PHLBET888. Bet more Win more!
+                </marquee>
+            </label>
+        </span>
 
+    </div>
+    <div class="col-sm-12">
+        <div class="card" style="background-color: transparent;">
+            <div class="card-body">
+                <!-- Slides with controls -->
+                <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="~/Content/assets/img/thumbnail/Games.png" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="~/Content/assets/img/Background/BG3.jpg" class="d-block w-100" alt="...">
+                        </div>
+                        @* <div class="carousel-item">
+                        <img src="~/Content/assets/img/Dashboard/ICONS_BG2.png" class="d-block w-100" alt="...">
+                        </div> *@
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+
+                </div><!-- End Slides with controls -->
+
+            </div>
+        </div>
+    </div>
+    @*
+    <div class="col-xl-12">
+    <div class="card nobg">
+    <img src="~/Content/assets/img/thumbnail/Games.png" alt="">
+    </div>
+    </div> *@
+</div>
