--- a/casino_testapp/Views/Shared/_Layout1.cshtml
+++ b/casino_testapp/Views/Shared/_Layout1.cshtml
@@ -48,15 +48,16 @@
     ======================================================== -->
 </head>
 
-<body ng-app="MJCasinoapp">
+<body>
     <!-- ======= Header ======= -->
-    <header id="header" class="header fixed-top d-flex align-items-center" style="background-color: #29303A;">
+    <header id="header" class="header fixed-top d-flex align-items-center" style="background-color: #29303A;"
+        ng-app="layoutApp" ng-controller="layoutCtrl">
 
 
         <div class="d-flex align-items-center justify-content-between">
             <i class="bi bi-list toggle-sidebar-btn logo" id="toggle" style="color: beige;"> <span></span></i>
             <a href="~/Dashboard/index" class="logo d-flex align-items-center">
-                <img src="~/Content/assets/img/logo1.png" alt="">
+                <img src="~/Content/assets/img/logo1.png" alt="" style="height: 60px;">
                 @* <span class="d-none d-lg-block" style="color:beige;">Mj Casino</span> *@
             </a>
 
@@ -66,22 +67,54 @@
         </div>
         <!-- End Search Bar -->
         <nav id="header" class="header-nav ms-auto">
-            <div id="logged" style="display: none;">
+            <div ng-show="logged">
                 <ul class="d-flex align-items-center" style="margin-top:15px;">
                     <!-- End Search Icon-->
                     <li class="nav-item dropdown pe-3">
                         <div class="nav-profile">
-
-                            <div id="bal" class="search-form d-flex align-items-center"
-                                style="justify-content: flex-end;">
-                                <input type="text" name="query" placeholder="Php {{balance}}"
-                                    title="Enter search keyword" style="width:fit-content; background:beige;" disabled>
-                                <button type="submit" title="cash"><i class="bi bi-cash-coin"></i></button>
+                            <div id="bal" class="d-flex align-items-center" style="justify-content: flex-end;">
+                                <span style="background:gray; height:50px; width:120px; border-radius:7px;">
+                                    <label style="color:white;display: flex;justify-content: start;margin-top: 15px;">
+                                        &nbsp; {{userBalance}}
+                                        &nbsp; &nbsp; <i class="bi bi-arrow-repeat" style="cursor:pointer;"></i></label>
+                                </span>
+                                @*<input type="text" name="query" placeholder="Php {{balance}}"
+                                title="Enter search keyword" style="width:fit-content; background:beige;" disabled>
+                                <button type="submit" title="cash"><i class="bi bi-cash-coin"></i></button>*@
                             </div>
 
 
                         </div>
                     </li>
+                    <li class="nav-item dropdown pe-3">
+                        <div class="nav-profile">
+                            <div class=" d-flex align-items-center" style="justify-content: flex-end;">
+
+
+                                <span data-bs-toggle="modal" data-bs-target="#DepositModal">
+                                    <button type="button" class="btn btn-secondary" data-bs-toggle="tooltip"
+                                        data-bs-placement="top" title="Deposit" style="background:lightseagreen;">
+                                        <i class="bi bi-credit-card"></i>
+                                    </button>
+                                </span>
+
+                                &nbsp;
+
+                                <span data-bs-toggle="modal" data-bs-target="#WithdrawModal">
+                                    <button type="button" class="btn btn-secondary" data-bs-toggle="tooltip"
+                                        data-bs-placement="top" title="Withdraw" style="background:crimson;">
+                                        <i class="bi bi-wallet2"></i>
+                                    </button>
+                                </span>
+                                @*<input type="text" name="query" placeholder="Php {{balance}}"
+                                title="Enter search keyword" style="width:fit-content; background:beige;" disabled>
+                                <button type="submit" title="cash"><i class="bi bi-cash-coin"></i></button>*@
+                            </div>
+
+
+                        </div>
+                    </li>
+
                     <li class="nav-item dropdown pe-3">
                         <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#"
                             data-bs-toggle="dropdown">
@@ -90,7 +123,7 @@
                         </a><!-- End Profile Iamge Icon -->
                         <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
                             <li class="dropdown-header">
-                                <h6 id="userName">{{username}}</h6>
+                                <h6>{{username}}</h6>
 
                             </li>
                             <li>
@@ -140,9 +173,9 @@
                 </ul>
             </div>
 
-            <div id="notlogged" style="display: none; margin-right: 15px;">
-                <button type="button" class="btn btn-success" onclick="toLogin()">Login</button>
-                <button type="button" class="btn btn-success" onclick="toRegister()">Register</button>
+            <div ng-show="notlogged" style=" margin-right: 15px;">
+                <button type="button" class="btn btn-success" ng-click="toLogin()">Login</button>
+                <button type="button" class="btn btn-success" ng-click="toRegister()">Register</button>
             </div>
 
 
@@ -153,56 +186,14 @@
         <!-- End Icons Navigation -->
 
     </header><!-- End Header -->
+    <script src="~/Scripts/AngularJs/layoutCtrl.js"></script>
     <!-- ======= Sidebar ======= -->
-    <script type="text/javascript">
-
-        var balance_obj = sessionStorage.getItem('bal');
-        var userbalance = JSON.parse(balance_obj);
-        if (userbalance != null) {
-            //console.log(userbalance);
-            const b = {
-                balance: userbalance['balance']
-
-            }
-            //   console.log(b);
-            w3.displayObject("bal", b);
-        }
-
-        var userData_obj = sessionStorage.getItem('user');
-        var userData = JSON.parse(userData_obj);
-        if (userData != null) {
-            // username = userData.data['username'];
-            // console.log(userData);
-            const u = {
-                username: userData.data['username']
-            }
-            // console.log(u);
-            w3.displayObject("userName", u);
-            //w3.show("logged");
-
-
-            var logged = document.getElementById("logged");
-            if (logged.style.display === "none") {
-                logged.style.display = "block";
-            }
-
-        } else {
-            var notlogged = document.getElementById("notlogged");
-            if (notlogged.style.display === "none") {
-                notlogged.style.display = "block";
-            }
-        }
-        function toLogin() {
-            window.open("../Authorization/login", '_self');
-
-        }
-        function toRegister() {
-            window.open("../Authorization/Registration", '_self');
-        }
 
 
 
-    </script>
+
+
+
     <aside id="sidebar" class="sidebar" style="background-color: #29303A;">
 
         <ul class="sidebar-nav" id="sidebar-nav">
@@ -237,9 +228,7 @@
 
     <main id="main" class="main layoutbg">
         @*<section class="section">*@
-        <div class="content-wrapper">
-
-
+        <div class="content-wrapper" ng-app="MJCasinoapp">
             @RenderBody()
         </div>
         @*</section>*@
@@ -250,7 +239,43 @@
     </div>
     <footer id="footer" class="footer footerbg"></footer><!-- End Footer -->
 
-    <div class="modal fade" id="verticalycentered" tabindex="-1">
+    <div class="modal fade" id="DepositModal" tabindex="-1">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Deposit</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    @*<select id="inputState" class="form-select">
+                    <option selected="">Player ID</option>
+                    <option>...</option>
+                    </select>*@
+                    <table class="table table-dark" >
+                        <thead>
+                            <tr>
+                                <th scope="col">username</th>
+                                <th scope="col">tag</th>
+                            </tr>
+                        </thead>
+                        <tbody ng-repeat="x in userDownlines">
+                            <tr>
+                                <td>{{x.balance_username}}</td>
+                                <td>{{x.balance_tag}}</td>
+                            </tr>
+
+                        </tbody>
+                    </table>
+
+                </div>
+                <div class="modal-footer">
+
+                    <button type="button" class="btn btn-primary">Transfer</button>
+                </div>
+            </div>
+        </div>
+    </div><!-- End Vertically centered Modal-->
+    <div class="modal fade" id="WithdrawModal" tabindex="-1">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header">
@@ -275,6 +300,7 @@
     </a>
 
 
+ 
 
     <script src="~/Scripts/AngularJs/myApp.js"></script>
     <!-- Vendor JS Files -->
